--- a/FirstForm/form.css
+++ b/FirstForm/form.css
@@ -1,11 +1,68 @@
 body{
-    background-image: url("C:\Users\Mahendra Suthar\Downloads\two.jpg") ;
+  background-color: #bce5df ;
+  width: 100%;
+  height: 100%;
+
   }
-  #title, #description{
-    text-align: center;
-    
-  }
+
+  
   #survey-form{
     
-    background-color:rgb(90, 189, 222);
+    background-color:#fcced0;
+    margin: 30px;
+    text-align: left;
+    padding: 10px;
   }
+  
+  #title{
+    margin-top: 20px;
+    font-size: 38px;
+    text-align: center;
+  }
+
+  #description{
+    margin-bottom: -30px;
+    font-family: Brush Script MT;
+    text-align: center;
+  }
+
+  fieldset{
+    margin: 13px;
+    padding: 10px;
+  }
+  #name{
+    
+    margin: 3 0 10 3;
+  }
+  #email{
+    margin: 3 0 10 3;
+  }
+  #number{
+    margin: 3 0 10 3;
+  }
+
+ .select{
+   margin: 2 0 5 0;
+ }
+
+ .section{
+   margin: 10 0 10 0;
+ }
+
+#interest{
+  margin: 5 0 5 5
+}
+
+#dropdown{
+  margin: 10 0 10 5;
+}
+#bio{
+  margin: 5 0 10 20;
+  color:#fcced0; 
+}
+
+#submit{
+  margin: 0 0 0 12;
+  border: 3px double black;
+  background-color : #dfc9d1;
+}
