--- a/Tributepage/tribute.css
+++ b/Tributepage/tribute.css
@@ -19,3 +19,46 @@
     height: 50px;
     margin-top: 100px;
   }
+  
+  .line{
+    width: 99%;
+    height: 12px;
+    background-color: black;
+    
+  }
+  
+  #title{
+    text-align: center;
+    margin: 0px;
+   
+  }
+  #image{
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: auto;
+    
+  }
+  
+  body{
+    background-color: #E7C66C ;
+  }
+  
+  p{
+    font-family: system-ui;
+    font-size: 15;
+  }
+  
+  a{
+    color: black;
+  }
+  
+  a:visited{
+    color: black;
+  }
+  a:hover{
+    color: white;
+  }
+  a:active{
+    color: brown;
+  }
